--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "postcss": "^8.2.15",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
